Loki/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.5.5
          
          args:
            - "-config.file=/etc/loki/conf/config.yaml"
          
          ports:
            - containerPort: 3100
          
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            
            limits:
              memory: "512Mi"
              cpu: "500m"
          
          volumeMounts:
            - name: loki-storage 
              mountPath: /loki
            - name: loki-config
              mountPath: etc/loki/conf
          
          readinessProbe:
            httpGet:
              path: /ready
              port: 3100
            initialDelaySeconds: 15
            periodSeconds: 20
      
      volumes:
        - name: loki-storage
          persistentVolumeClaim:
            claimName: loki-pvc
        - name: loki-config
          configMap:
            name: loki-config
